--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<div class = "content">
 					<div class = "blog">
-						<h6 id = "date"> 21 September 2013</h6>
+						<h6 class = "date"> 21 September 2013</h6>
 						<h2> Lorem Ipsum </h2>
 						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat   </p>
 
@@ -52,7 +52,7 @@
 
 								<div class = "content">
 					<div class = "blog">
-						<h6 id = "date"> 21 September 2013</h6>
+						<h6 class = "date"> 21 September 2013</h6>
 						<h2> Lorem Ipsum </h2>
 						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat   </p>
 
